# Vision-models-pytorch

./: .gitignore  README.md  helper_functions.py  vision_models.py
SportsClassification/: docker-scripts.sh  explore_model.ipynb  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py
SportsClassification/01_alexnet/: model.py
SportsClassification/ModelTrainWrapper/: model_train_wrapper.py
SportsClassification/api/: ideas.txt  main.py  schemas.py
SportsClassification/configs/: dataset_config.yaml  default.yaml  model_config.yaml
SportsClassification/data/: download_data.py
SportsClassification/datasets/: augmentations.py  dataset_utils.py
SportsClassification/evaluation/: evaluate.py  metrics.py
SportsClassification/inference/: ideas.txt  infer.py
SportsClassification/models/: backbone.py  detection_head.py  model_factory.py  utils.py
SportsClassification/notebooks/: loss_curve_live.ipynb
SportsClassification/notebooks/SportsClassification/: summary_of_models.ipynb
SportsClassification/scripts/: download_data.py  evaluate.py  preprocess_data.py  train.py
SportsClassification/temp_name/: model.py
SportsClassification/temp_name/notebooks/: AlexNetTraining.ipynb
SportsClassification/tests/: fixtures.py  test_inference.py  test_models.py  test_utils.py
SportsClassification/training/: early_stopping.py  losses.py  optimizers.py  schedulers.py  trainer.py
SportsClassification/utils/: aws_handler.py  config_parser.py  data_utils.py  filesystem.py  helpers.py  logger.py  preprocessing.py  seed.py
spark/: spark_eda.py  spark_kaggle_.py
(+84 files in other folders)
